<resources>
    <string name="app_name">Comandaclient</string>
    <string name="ap_name">Vales App</string>


    <string name="dialog_ok">OK</string>


    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>

    <!--Print Errors-->
    <string name="handlingmsg_warn_receipt_near_end">Papel de impresora escaso.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Nivel de bateria de impresora bajo\n</string>
    <string name="handlingmsg_err_no_response">Por favor revise la conexion entre la impresora y el dispositivo movil.\nPerdida de conexion\n</string>
    <string name="handlingmsg_err_cover_open">Por favor cierre la carcaza de la impresora.\n</string>
    <string name="handlingmsg_err_receipt_end">Por favor, revise el papel de la impresora.\n</string>
    <string name="handlingmsg_err_paper_feed">Por favor, libere el boton de encendido.\n</string>
    <string name="handlingmsg_err_autocutter">Por favor, revise el papel de la impresora, probablemente se encuentre atorado.\n Luego reinicie la impresora.\n</string>
    <string name="handlingmsg_err_need_recover">Si el problema persiste, presione el interruptor de encendido.\n</string>
    <string name="handlingmsg_err_unrecover">Por favor, vuelva a encender la impresora.\n, Si el problema persiste, consulte a su tecnico.</string>
    <string name="handlingmsg_err_overheat">Por favor, aguarde a que la luz de error se apague.\n</string>
    <string name="handlingmsg_err_head">Cabezal de impresora sobrecalentado.\n</string>
    <string name="handlingmsg_err_motor">Motor de rodillo sobrecalentado.\n</string>
    <string name="handlingmsg_err_battery">Bateria de impresora sobrecalentada.\n</string>
    <string name="handlingmsg_err_wrong_paper">Por favor, inserte correctamente el papel de la impresora.\n</string>
    <string name="handlingmsg_err_battery_real_end">Por favor, conecte el cable de alimentacion o cambie la bateria de la impresora.\n</string>
    <string name="handlingmsg_err_offline">Impresora sin conexion.\n</string>


    <string name="dealer_venue">N8P51/53"</string>


    <!-- Print -->
    <string name="venue_name">NAVE 8 PUESTO 51-53\n</string>
    <string name="company_name">FRUTYLEG SRL\n</string>
    <string name="print_success">Retire el comprobante</string>

    <!-- Comanda card view -->
    <string name="comanda_name">Vale N</string>
    <string name="time">Fecha</string>
    <string name="client">Cliente</string>
    <string name="total">Total</string>
    <string name="senia">Seña</string>
    <string name="bultos">Bultos</string>

    <string name="clentes">Clientes</string>

    <string name="settings">Configuración</string>

    <string name="add_provider_title">Ingreso de Item</string>




    <string name="clientes">Clientes</string>

    <!-- Settings -->
    <string name="update_btn_title">Actualizar</string>
    <string name="update_title">Actualizar Stock</string>
    <string name="last_update">Ultima vez actualizado </string>
    <string name="add_new_item">Ingresar nuevo Item vacio</string>

    <string name="empty_vales_search">No hay vales emitidos \n para el dia seleccionado.</string>
    <string name="empty_vales_search_id">No hay vales emitidos \n con el codigo ingresado.</string>
    <string name="empty_vales_search_snackbar">No hay vales emitidos para el dia seleccionado.</string>


</resources>
