<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/frame_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toptoolbar">

        <include layout="@layout/layout_toolbar" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/zh_white"
            android:gravity="center"
            android:padding="@dimen/general_margin_small"
            android:text="@string/update_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rel_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_margin_small">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_last_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/last_update"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_btn_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/general_margin_small"
                android:text="@string/update_btn_title"
                android:textColor="@color/zh_white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>