<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toptoolbar">

        <include layout="@layout/layout_toolbar" />

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/content_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/general_margin_small"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/general_margin"
                    android:layout_weight="0.7"
                    android:drawablePadding="@dimen/general_margin_small"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:text="@string/total"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_total"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/general_margin"
                    android:layout_weight="0.3"
                    android:gravity="right|center_vertical"
                    android:maxLines="2"
                    android:textSize="18sp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/general_margin"
                    android:layout_weight="0.7"
                    android:drawablePadding="@dimen/general_margin_small"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:text="@string/senia"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/txt_total_senia"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/general_margin"
                    android:textSize="18sp"
                    android:layout_weight="0.3"
                    android:gravity="right|center_vertical"
                    android:maxLines="2"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/general_margin"
                    android:layout_weight="0.7"
                    android:drawablePadding="@dimen/general_margin_small"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:text="@string/bultos"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/txt_cant_bultos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/general_margin"
                    android:layout_weight="0.3"
                    android:textSize="18sp"
                    android:gravity="right|center_vertical"
                    android:maxLines="2"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_comandas"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />


</LinearLayout>