<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/content"

            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/content_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin_small"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/general_margin"
                            android:layout_weight="0.7"
                            android:gravity="left|center_vertical"
                            android:maxLines="1"
                            android:drawableLeft="@drawable/ic_description"
                            android:drawablePadding="@dimen/general_margin_small"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:text="@string/comanda_name"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <TextView
                            android:id="@+id/txt_num_comanda"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/general_margin"
                            android:layout_weight="0.3"
                            android:gravity="right|center_vertical"
                            android:maxLines="2"
                            android:text="32232"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/general_margin"
                            android:layout_weight="0.7"
                            android:gravity="left|center_vertical"
                            android:maxLines="1"
                            android:drawableLeft="@drawable/ic_calendar"
                            android:drawablePadding="@dimen/general_margin_small"
                            android:text="@string/time"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <TextView
                            android:id="@+id/txt_date"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/general_margin"
                            android:layout_weight="0.3"
                            android:gravity="right|center_vertical"
                            android:maxLines="2"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:orientation="horizontal">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/general_margin"
                            android:layout_weight="0.7"
                            android:gravity="left|center_vertical"
                            android:maxLines="1"
                            android:text="@string/client"
                            android:drawableLeft="@drawable/ic_person_green"
                            android:drawablePadding="@dimen/general_margin_small"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <TextView
                            android:id="@+id/txt_client"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/general_margin"
                            android:layout_weight="0.3"
                            android:gravity="right|center_vertical"
                            android:maxLines="2"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>